@@ -149,7 +149,10 @@ class TestBankBasics:
 
     @pytest.fixture
     def legacy_path_index(self, ebank, monkeypatch):
-        """Overwrite 'read_index' to return an index with leading '/'s in the file paths"""
+        """
+        Overwrite 'read_index' to return an index with leading '/'s in
+        the file paths.
+        """
         ind = ebank.read_index()
         ind["path"] = "/" + ind["path"]
 
@@ -157,7 +160,7 @@ class TestBankBasics:
             return ind
 
         monkeypatch.setattr(ebank, "read_index", read_index)
-        yield  # <- is this necessary? it's been a little while
+        yield
         monkeypatch.undo()
 
     def test_has_attrs(self, bing_ebank):
@@ -372,7 +375,8 @@ class TestBankBasics:
 
     def test_file_path_reconstruction(self, ebank):
         """
-        It should be possible to get the full path of a file in the index using pathlib's "/" overloading
+        It should be possible to get the full path of a file in the index using
+        pathlib's "/" overloading
         """
         bank_path = ebank.bank_path
         index = ebank.read_index()
