@@ -1,11 +1,15 @@
 obsplus master
+  - obsplus.bank
+    Better support for bank paths on Windows See # 256.
   - obsplus.events.validate
     * Loosened check for duplicate pick ids to only check for duplicate
       P and S phases
     * Made amplitude time window check skip over rejected amplitudes
   - obsplus.utils
     * Fix issue #249 to allow pandas 1.4+
-  - Dropped python 3.7 from test matrix to keep size managable.
+  - versions
+    Dropped python 3.7 from test matrix to keep size managable.
+    Added python 3.10 to test matrix.
 
 obsplus 0.2.2
   - Added support for python 3.9, dropped python 3.6
